@@ -442,9 +442,15 @@ MainWindow::MainWindow(bool restoreWindowPosition, bool singleSession)
 	// Tool controller <-> UI connections
 	connect(m_doc->toolCtrl(), &tools::ToolController::colorUsed, m_dockToolSettings, &docks::ToolSettings::addLastUsedColor);
 	connect(m_doc->toolCtrl(), &tools::ToolController::actionCancelled, m_dockToolSettings->colorPickerSettings(), &tools::ColorPickerSettings::cancelPickFromScreen);
+	// clang-format on
+	connect(
+		m_dockToolSettings, &docks::ToolSettings::foregroundColorChanged,
+		m_dockToolSettings->colorPickerSettings(),
+		&tools::ColorPickerSettings::setCurrentColor);
 	connect(
 		m_doc->toolCtrl(), &tools::ToolController::toolStateChanged, this,
 		&MainWindow::setToolState, Qt::QueuedConnection);
+	// clang-format off
 
 	connect(m_dockLayers, &docks::LayerList::layerSelected, m_doc->toolCtrl(), &tools::ToolController::setActiveLayer);
 	connect(
